--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ justify-content: center;
 }
 .content{
 
-    color: #d59bff ;
+    color: #ffffff ;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
     display: flex;
@@ -213,6 +213,10 @@ text-align: center;
     fill: white;
 }
 /* font family */
+
+
+
+
 .fn{
     position: absolute;
     z-index: 5;
