--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ justify-content: center;
 .content{
 
     color: #ffffff ;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+
     font-weight: 200;
     display: flex;
     flex-direction: column;
@@ -46,7 +47,7 @@ font-size: 40px;
 text-transform: uppercase;
 letter-spacing: 27px;
 line-height: 3;
-
+font-family: "Josefin Sans", sans-serif;
 
 }
 /* BUTTONS */
@@ -253,7 +254,7 @@ border-radius: 8px;
 }
 .fontThree{
     font-family: "Rubik Wet Paint", system-ui;
-    font-weight: 200;
+
 }
 .fontFoure{
     font-family: "Josefin Sans", sans-serif;
@@ -292,6 +293,29 @@ letter-spacing: 15px;
     .bigTitle{
 font-size: 15px;
 letter-spacing: 5px;
+    }
+
+    .fonts{
+        background-color: white;
+        width: 200px;
+        height: 50vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    padding: 10px;
+    border-radius: 8px;
+    
+    
+    }
+    .fonts .font{
+        background-color: rgb(239, 247, 251);
+        text-align: center;
+        font-size: 20px;
+        border-radius: 5px;
+        padding: 10px 0px;
+        box-shadow: 0px 0px 1px 2px rgba(173, 205, 249, 0.292);
+     color: rgba(9, 9, 42, 0.732);
+     cursor: pointer;
     }
  
    
